[package]
name = "gst-example-rs"
version = "0.1.1"
authors = ["FUJINAKA Fumiya <uzuna.kf@gmail.com>"]
edition = "2021"
rust-version = "1.65"
readme = "README.md"
repository = "https://github.com/uzuna/gst-example-rs"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
log = "0.4.17"
structopt = "0.3.26"
anyhow = "1.0.66"
derive_more = "0.99.17"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19.1" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19"}
