[package]
name = "gtkui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.1"
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19.1" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19"}
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.16", version = "0.16.2" }
gdk = { git = "https://github.com/gtk-rs/gtk3-rs", branch = "0.16", version = "0.16" }
gtk = { git = "https://github.com/gtk-rs/gtk3-rs", branch = "0.16", version = "0.16" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core.git", package = "gio", branch = "0.16", version = "0.16" }
anyhow = "1.0.69"
log = "0.4.17"
derive_more = "0.99.17"

[features]
default = ["tutorial5-x11"]
tutorial5-x11 = []