[package]
name = "gst-example-plugin"
version = "0.1.0"
edition = "2021"
authors = ["FUJINAKA Fumiya <uzuna.kf@gmail.com>"]
rust-version = "1.65"
readme = "README.md"
repository = "https://github.com/uzuna/gst-example-rs"
description = "Rust Example Plugin"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19.1" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19" }
once_cell = "1.0"
strum = { version = "0.24.1", features = ["derive"] }
ers_meta = { package = "example-rs-sys",  path = "../meta/example-rs-sys"}
ec_meta = { package = "example-c-sys",  path = "../meta/example-c-sys"}
parking_lot = "0.12.1"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"}


[lib]
name = "gstrsexample"
crate-type = ["cdylib"]
path = "src/lib.rs"


[package.metadata.deb]
maintainer = "FUJINAKA Fumiya <uzuna.kf@gmail.com>"
copyright = "2022, FUJINAKA Fumiya <uzuna.kg@gmail.com>"
assets = [
    ["target/release/libgstrsexample.so", "usr/lib/x86_64-linux-gnu/gstreamer-1.0/", "755"],
    ["target/release/libexample_c_meta.so", "usr/lib/x86_64-linux-gnu/", "755"],
    ["target/release/libexample_rs_meta.so", "usr/lib/x86_64-linux-gnu/", "755"],
]
