[package]
name = "gst-example-plugin"
version = "0.0.1"
edition = "2021"
authors = ["FUJINAKA Fumiya <uzuna.kf@gmail.com>"]
rust-version = "1.65"
readme = "README.md"
repository = "https://github.com/uzuna/gst-example-rs"
description = "Rust Example Plugin"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# gstremaerはcrates.ioでの公開ではない。
# master参照すると進んでしまうのでbranchとバージョンで固定する
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19.1" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.19", version = "0.19" }
once_cell = "1.0"

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"}


[lib]
name = "gstrsexample"
crate-type = ["cdylib"]
path = "src/lib.rs"
